--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,5 +42,13 @@
 			</p>
 		</div>
 	</div>
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v2.10&appId=331270403906632";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </footer>
 <!-- End Footer -->
