Add twitter button.

--- a/_includes/twitter-feed.html
+++ b/_includes/twitter-feed.html
@@ -9,6 +9,7 @@
             <h3>{{ site.tweetsFeedTitle }} <a href="https://twitter.com/search?q=%23{{ site.twitterHashTag }}" target="_blank">#{{ site.twitterHashTag }}</a>
             </h3>
             <div id="tweets" class="tweets"></div>
+            <a href="https://twitter.com/intent/tweet?button_hashtag=dfba17" class="twitter-hashtag-button" data-size="large" data-show-count="false">Tweet #dfba17</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
 </section>
