--- a/_includes/tickets-2.html
+++ b/_includes/tickets-2.html
@@ -4,6 +4,7 @@
 		<div class="col-lg-8 col-md-10 col-lg-offset-2 col-md-offset-1">
 			<h3>{{ site.ticketsTitle }}</h3>
 			<div class="tickets-table row animated hiding" data-animation="fadeInDown" data-delay="0">
+				<div style="width:100%; text-align:left;"><iframe src="//eventbrite.it/tickets-external?eid=37804774097&ref=etckt" frameborder="0" height="360" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #ADB0B6 ; text-decoration: none;" target="_blank" href="http://www.eventbrite.it/">Con tecnologia Eventbrite</a></div></div>
 			{% assign animationDelay = 0 %}
             {% for ticketsOffer in site.ticketsOffers %}
 	            <div class="tickets-row animated hiding" data-animation="fadeInDown" data-delay="{{ animationDelay }}">
